src/routes/About/style.scss
@import 'sass-includes';

.about--header {
  z-index: 3;
  @include breakpoint($tablet-lg) {
    bottom: 15%;
  }
   @include breakpoint($mobile-lg) {
    bottom: 12%;
  }
  @media screen and (max-device-width: 1040px) and (orientation : landscape) {
    width: 50%;
    z-index: 10;
    margin-left: 0;
  }
}

.about_video {
  z-index: 8;
  right: -5%;
  top: 15%;
  overflow: hidden;
  @include breakpoint($tablet-md) {
    top: 13%;
    right: -6%;
  }
  @include breakpoint($mobile-lg) {
    right: -15%;
  }
  @media screen and (max-device-width: 1040px) and (orientation : landscape) {
    right: -8%;
  }
}

.video_mask {
  width: 60rem;
  height: 60rem;
  border-radius: 50%;


  @include breakpoint($desktop-sm) {
    width: calc(100vw - 60rem);
    height: calc(100vw - 60rem);
  }

  @include breakpoint($tablet-lg) {
    height: calc(100vw - 54rem);
    width: calc(100vw - 54rem);
  }

  @include breakpoint($tablet-md) {
    height: calc(100vw - 30rem);
    width: calc(100vw - 30rem);
  }

  @include breakpoint($mobile-lg) {
    height: calc(100vw - 25rem);
    width: calc(100vw - 25rem);
  }

  @include breakpoint($mobile-sm) {
    height: calc(100vw - 9.5rem);
    width: calc(100vw - 9.5rem);
  }

  @media screen and (max-device-width: 540px) and (orientation : landscape) {
    height: calc(100vw - 23rem);
    width: calc(100vw - 23rem);
  }


}

.video_remove_mask {
  // height: auto;
  width: auto;
  border-radius: 0;
  right: 0;
  @include breakpoint($desktop-sm) {
    height: calc(100vw - 60rem);
  }

  @include breakpoint($tablet-lg) {
    height: calc(100vw - 54rem);
  }

  @include breakpoint($tablet-md) {
    height: calc(100vw - 30rem);
  }

  @include breakpoint($mobile-lg) {
    height: calc(100vw - 25rem);
  }

  @include breakpoint($mobile-sm) {
    height: calc(100vw - 9.5rem);
  }

  @media screen and (max-device-width: 540px) and (orientation : landscape) {
    height: calc(100vw - 23rem);
  }

  video {
    width: 100%;
  }
}

.about--transition {
  transition: all 0.4s ease-in;
}

.about--image {
  display: flex;
  height: 50vh;
  position: absolute;
  top: 12.5%;
}

.about--curve-container {
  position: relative;
  width: 100vw;
  height: 100vw;
  border-radius: 50%;
  border: solid 1px $medium-gray;
  bottom: -20%;
  left: -15%;
  //media quesries
  @include breakpoint($tablet-lg) {
    position: relative;
    width: 400vw;
    height: 400vw;
    left: -300%;
    bottom: 0;
  }

  @include breakpoint($mobile-lg) {
    left: -305%;
  }

  @media screen and (max-device-width: 1040px) and (orientation : landscape) {
    bottom: 4.4rem;
  }


}

.about--curve-container > div {
  position: absolute;
  top: 0;
  left: 0;
  height: calc(50vw + 1rem);
  width: calc(50vw + 1rem);
  transform-origin: bottom right;
  // media queries
  @include breakpoint($tablet-lg) {
    height: calc(200vw + 1rem);
    width: calc(200vw + 1rem);
  }
}

.about--explore-text {
  // media queries
  @include breakpoint($desktop-sm) {
    font-size: 2.4rem;
  }
}

.about--curve-container > div:before {
  font-size: 3.6rem;
  @include font(bold);
  left: -3rem;
  bottom: 1.8rem;
  line-height: 3.6rem;
  // media queries
  @include breakpoint($mobile-lg) {
    font-size: 1.6rem;
    line-height: 1.6rem;
    left: -1.4rem;
    bottom: 2.3rem;
  }
}

.about--curve-container > div:after {
  bottom: 0px;
  left: 0px;
}

.about--curve-container > div:after,
.about--curve-container > div:before {
  position: absolute;
  content: '';
  height: 2rem;
  width: 2rem;
  border-radius: 50%;
}

.about--curve-container > div:nth-child(1) {
  transform: rotate(115deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(110deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(120deg);
  }
}
.about--curve-container > div:nth-child(2) {
  transform: rotate(129.4deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(115deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(125deg);
  }
}
.about--curve-container > div:nth-child(3) {
  transform: rotate(141.6deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(120deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(130deg);
  }
}
.about--curve-container > div:nth-child(4) {
  transform: rotate(154deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(125deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(135deg);
  }
}

.about--curve-container > div:nth-child(n+1):before {
  content: "Research";
  transform: rotate(-115deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(-110deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(-120deg);
  }

}
.about--curve-container > div:nth-child(n+2):before {
  content: "Engineering";
  transform: rotate(-129.4deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(-115deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(-125deg);
  }
}
.about--curve-container > div:nth-child(n+3):before {
  content: "Visual";
  transform: rotate(-141.6deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(-120deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(-130deg);
  }
}
.about--curve-container > div:nth-child(n+4):before {
  content: "UX";
  transform: rotate(-154deg);
  // media queries
  @include breakpoint($tablet-lg) {
    transform: rotate(-125deg);
  }
  @include breakpoint($mobile-lg) {
    transform: rotate(-135deg);
  }
}

.about--curve-container > div:nth-child(n+1):after {
  background: $redshift;
}
.about--curve-container > div:nth-child(n+2):after {
  background: #E33170;
}
.about--curve-container > div:nth-child(n+3):after {
  background: #BE3C97;
}
.about--curve-container > div:nth-child(n+4):after {
  background: #B141A5;
}


.about-curve {
  &:before {
    content: '';
    background-color: $redshift;
    display: block;
    margin: 1.3rem auto;
    position: relative;
    border-radius: 50%;
  }
}

.about-curve img {
  top: 30rem;
  position: relative;
}

.about-gradient {
  background: rgb(236, 0, 94); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(236, 0, 94, 1) 0%, rgba(255, 0, 172, 1) 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  rgba(236, 0, 94, 1) 0%, rgba(255, 0, 172, 1) 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  rgba(236, 0,94, 1) 0%, rgba(255, 0, 172, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ec005e', endColorstr='#ff00ac',GradientType=0 ); /* IE6-9 */
}

.about__office-image img {
  width: 100%;
}

.about__process video {
  width: 100%;
}

.about__process__img {
  width: 100%;
  padding: 3rem;
  // media queries
  @include breakpoint($mobile-lg) {
    padding: 1rem;
  }
}

.about__clients {
  background: $dark-grey;
}

.about section {
  position: relative;
}

.about--clients h2 {
  width: 69%;
  // media queries
  @include breakpoint($mobile-lg) {
    width: 100%;
  }
}

// Team
.about {
  .modal__close {
    @extend %page-margins;
    right: 0;
    text-align: right;

    .icon-close {
      color: $body;
      left: 0;
    }
  }
}

.team-member__modal {
  background-repeat: no-repeat;
  background-position: right;
  background-color: $white;
  top: 0;
  bottom: 0;
  position: absolute;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  // media queries
  @include breakpoint($mobile-lg) {
    width: 100%;
    overflow-y: scroll;
  }
}

.about--team {
  img {
    display: block;
  }

  .team-member {
    position: relative;
    overflow: hidden;
    height: auto;
    // text-transform: lowercase;
    cursor: pointer;
  }

  .member__name {
    line-height: 1.2;
    margin-bottom: 1rem;
  }

  .member__position {
    padding-right: 5rem;
  }

  .member__name,
  .member__position {
    @include font-size(h4);
    width: 100%;
    display: block;
  }

  h2 {
    line-height: 1.2;
    padding-bottom: 0.5rem;
    // media queries
    @include breakpoint($mobile-lg) {
      line-height: 1.45;
    }

    @include breakpoint($mobile-sm) {
      line-height: 1.2;
      padding: 0;
    }
  }

  h4 {
    line-height: 1.333;
    // media queries
    @include breakpoint($mobile-sm) {
      line-height: 1.1;
      padding: 0;
    }
  }

  h2,
  h4 {
    // media queries
    @include breakpoint($mobile-lg) {
      font-size: 2.496rem;
    }
    @include breakpoint($mobile-sm) {
      font-size: 2rem;
    }
  }

  .quarter-width {
    //media queries
    @include breakpoint($tablet-md) {
      width: 50%;
    }
  }
}

.team-member-bio {
  position: relative;
  z-index: 9;
  width: 50%;
  // media queries
  @include breakpoint($tablet-md) {
    width: 100%;
  }

  @include breakpoint($mobile-lg) {
    transform: none;
    top: 5rem;
  }

  h2 {
    text-transform: lowercase;
    // media queries
    @include breakpoint($desktop-lg) {
      font-size: 3.6rem;
    }

    @include breakpoint($mobile-lg) {
      font-size: 2.8rem;
      line-height: 1.65;
    }
  }

  h5 {
    background-color: #fff;
    // media queries
    @include breakpoint($desktop-lg) {
      font-size: 2.1rem;
    }

    @include breakpoint($mobile-lg) {
      font-size: 1.4rem;
    }
  }
}

.bio--wrap {
  height: 100%;
  display: flex;
  align-items: center;
  // media queries
  @media screen and (max-height: 680px) {
    align-items: flex-start;
    height: auto;
  }
  @include breakpoint($tablet-md) {
    position: relative;
  }
}

.bio--wrap__img {
  height: 100%;
  text-align: center;
  img {
    height: 100%;
    width: auto;
    position: absolute;
    @media screen and (max-height: 680px) {
      min-height: 67.5rem;
    }
  }
}

.about .modal__wrap .icon-close {
  left: -1rem;
  &:before {
    background-color: #ffffff;
    border-radius: 50%;
    padding: 1rem;
  }
}

